[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
reqwest = {version="0.12.12",features=["json"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
jsonwebtoken = "8"
parking_lot = "0.12.3"
futures-util =  {version="0.3.31",default-features = false, features = ["std"]}
actix-web-lab = "0.23.0"
chrono = "0.4.39"
tokio = "1.42.0"
actix-cors = "0.7.0"
tokio-stream = "0.1.17"
